# ChangeLog for media-gfx/gimp
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/gimp/ChangeLog,v 1.254 2008/05/18 02:08:03 hanno Exp $

  18 May 2008; Hanno Boeck <hanno@gentoo.org> gimp-2.3.19.ebuild,
  gimp-2.4.2.ebuild, gimp-2.4.5.ebuild, gimp-9999.ebuild:
  Fix circular dep with gimp-help, dependency on gimp-help isn't really
  needed.

  06 Apr 2008; Hanno Boeck <hanno@gentoo.org> gimp-2.4.2.ebuild,
  -gimp-2.4.4.ebuild, gimp-2.4.5.ebuild, gimp-9999.ebuild:
  Raise gettext dep.

  26 Mar 2008; Hanno Boeck <hanno@gentoo.org> +files/gimp-web-browser.patch,
  gimp-2.4.5.ebuild:
  Add xdg-open support for webbrowser, fix disabling gnome support.

  09 Mar 2008; <ricmm@gentoo.org> gimp-2.3.19.ebuild:
  Drop to ~mips due to unstable deps

*gimp-2.4.5 (03 Mar 2008)

  03 Mar 2008; Hanno Boeck <hanno@gentoo.org> +gimp-2.4.5.ebuild:
  Version bump.

  04 Feb 2008; Hanno Boeck <hanno@gentoo.org> +files/gimp-svg.diff:
  Add forgotten patch.

*gimp-2.4.4 (04 Feb 2008)

  04 Feb 2008; Hanno Boeck <hanno@gentoo.org> +gimp-2.4.4.ebuild:
  Version bump.

*gimp-2.4.3 (22 Jan 2008)

  22 Jan 2008; Jeroen Roovers <jer@gentoo.org> +gimp-2.4.3.ebuild:
  Version bump (bug #202635).

  28 Dec 2007; Jeroen Roovers <jer@gentoo.org> gimp-2.4.2.ebuild:
  Lock the target. Bait the line. Grab the net. Catch the man. 2.4.2 is stable
  for HPPA (bug #203382).

  28 Dec 2007; Raúl Porcel <armin76@gentoo.org> gimp-2.4.2.ebuild:
  alpha/ia64/sparc stable wrt #203382

  27 Dec 2007; <rich0@gentoo.org> gimp-2.4.2.ebuild:
  Stable on amd64 - #203382.

  27 Dec 2007; Brent Baude <ranger@gentoo.org> gimp-2.4.2.ebuild:
  Marking gimp-2.4.2 ppc and ppc64 stable for bug 203382

  26 Dec 2007; Dawid Węgliński <cla@gentoo.org> gimp-2.4.2.ebuild:
  Stable on x86 (bug #203382)

*gimp-2.4.2 (26 Nov 2007)

  26 Nov 2007; Hanno Boeck <hanno@gentoo.org> +gimp-2.4.2.ebuild:
  Version bump.

*gimp-2.4.1 (01 Nov 2007)
