@@ -1,6 +1,11 @@
 # ChangeLog for media-gfx/gimp
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/gimp/ChangeLog,v 1.254 2008/05/18 02:08:03 hanno Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/gimp/ChangeLog,v 1.255 2008/06/02 13:28:21 hanno Exp $
+
+*gimp-2.4.6 (02 Jun 2008)
+
+  02 Jun 2008; Hanno Boeck <hanno@gentoo.org> +gimp-2.4.6.ebuild:
+  Version bump.
 
   18 May 2008; Hanno Boeck <hanno@gentoo.org> gimp-2.3.19.ebuild,
   gimp-2.4.2.ebuild, gimp-2.4.5.ebuild, gimp-9999.ebuild:
